--- a/contrib/simple-midi-control-section.rc
+++ b/contrib/simple-midi-control-section.rc
@@ -1,86 +1,94 @@
-# simple-midi-control-section.rc
+# contrib/simple-midi-control-section.rc
 #
-# This file sets up the example keys shown in the Sequencer64 manual,
-# section 8.8
+# 2018-01-31 to 2018-01-31
+#
+# See the sequencer64-doc project and the PDF file it contains.
+# This setup file is explained in section 9.2 "Sequencer64 'rc' File /
+# MIDI Control Extended Automation Section.
 
 [midi-control]
 
+# The leftmost number on each line here is the pattern number, from
+# 0 to 31 (and beyond for the mute-groups). Next, there are three
+# groups of bracketed numbers that follow:
+#
+#    [toggle]  [on]  [off]
+#
+# In each group, there are six numbers:
+#
+#    [on/off invert status d0 d1min d1max]
+#
+# 'on/off' enables/disables (1/0) the MIDI control for the pattern.
+# 'invert' (1/0) causes the opposite if data is outside the range.
+# 'status' is by MIDI event to match (channel is NOT ignored).
+# 'd0' is the first data value.  Example: if status is 144 (Note On),
+# then d0 represents Note 0.
+# 'd1min'/'d1max' are the range of second values that should match.
+# Example:  For a Note On for note 0, 0 and 127 indicate that any
+# Note On velocity will cause the MIDI control to take effect.
+
 84      # MIDI controls count (74 or 84)
 
-# Pattern-group section:
-0 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-1 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-2 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-3 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-4 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-5 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-6 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-7 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-8 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-9 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-10 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-11 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-12 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-13 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-14 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-15 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-16 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-17 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-18 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-19 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-20 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-21 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-22 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-23 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-24 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-25 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-26 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-27 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-28 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-29 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-30 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-31 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-# Mute-in group section:
-32 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-33 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-34 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-35 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-36 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-37 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-38 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-39 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-40 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-41 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-42 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-43 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-44 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-45 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-46 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-47 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-48 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-49 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-50 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-51 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-52 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-53 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-54 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-55 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-56 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-57 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-58 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-59 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-60 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-61 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-62 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-63 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
+#  ------------------ on/off (indicates if the section is enabled/active)
+# | ----------------- inverse
+# | |  -------------- MIDI status (event) byte (e.g. note on)
+# | | |  ------------ data 1 (e.g. note number)
+# | | | |  ---------- data 2 min
+# | | | | |  -------- data 2 max
+# | | | | | |
+# v v v v v v
+# 0 0 0 0 0 0]   [0 0 0 0 0 0]   [0 0 0 0 0 0]
+# Toggle          On              Off
+#
+# Note On  = 144 = 0x90
+# Note Off = 145 = 0x91
+#
+#           00000000001111111111222     MIDI note number
+#           01234567890123456789012
+#             ------------------------ Screen Set Down
+#            |  ---------------------- Screen Set Up
+#            | |
+#            v v
+#            B B  B B B  B B  B B B     Black keys
+#           W W WW W W WW W WW W W      White keys
+#           ^ ^ ^^ ^ ^ ^^ ^ ^^ ^ ^
+#           | | || | | || | || | |
+#           | | || | | || | || |  ---- MIDI RECORD off
+#           | | || | | || | ||  ------ MIDI RECORD on
+#           | | || | | || | | -------- MIDI RECORD toggle
+#           | | || | | || |  --------- MIDI THRU off
+#           | | || | | ||  ----------- MIDI THRU on
+#           | | || | | | ------------- MIDI THRU toggle
+#           | | || | |  -------------- BPM page up
+#           | | || |  ---------------- BPM step up
+#           | | ||  ------------------ BPM step down
+#           | | | -------------------- BPM page down
+#           | |  --------------------- Play
+#           |  ----------------------- Pause
+#            ------------------------- Stop
+#
+# W: Note 0 (red) is Stop.
+# B: Note 1 (black) is screen set down.
+# W: Note 2 (yellow) is Pause.
+# B: Note 3 (black) is screen set up.
+# W: Note 4 (green) is Play.
+# W: Note 5 (light cyan) is BPM page down.
+# W: Note 7 (dark cyan) is BPM step down.
+# W: Note 9 (dark cyan) is BPM step up.
+# W: Note 11 (light cyan) is BPM page up.
+# W: Note 12, 14, and 16 are MIDI THRU toggle, on, and off.  The velocity
+#    value from 0 to 31 indicates the sequence in the current set to act upon.
+# W: Note 17, 19, and 21 are MIDI RECORD toggle, on, and off.  The velocity
+#    value from 0 to 31 indicates the sequence in the current set to act upon.
+#
 # bpm up: Note On 9
 64 [0 0   0   0   0   0] [1 0 144   9   0 127] [0 0   0   0   0   0]
 # bpm down: Note On 7
 65 [0 0   0   0   0   0] [1 0 144   7   0 127] [0 0   0   0   0   0]
 # screen set up:
-66 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
+66 [0 0   0   0   0   0] [1 0 144   3   0 127] [0 0   0   0   0   0]
 # screen set down:
-67 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
+67 [0 0   0   0   0   0] [1 0 144   1   0 127] [0 0   0   0   0   0]
 # mod replace:
 68 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
 # mod snapshot:
@@ -94,27 +102,27 @@
 # screen set play:
 73 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
 # Extended MIDI controls:
-# start playback (pause, start, stop):
-# Stop:  Note On 0
-# Pause: Note On 2
-# Play:  Note On 4
+
+# start playback (stop/off/red=0, pause/toggle/yellow=2, and
+# start/on/green=4).  See the tutorial.
 74 [1 0 144   2   0 127] [1 0 144   4   0 127] [1 0 144   0   0 127]
 # performance record:
 75 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
 # solo (toggle, on, off):
 76 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
 # MIDI THRU (toggle, on, off):
-77 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-# bpm page up:  Note On 11
+77 [1 0 144  12   0 127] [1 0 144  14   0 127] [1 0 144  16   0 127]
+# bpm page up: Note On 11
 78 [0 0   0   0   0   0] [1 0 144  11   0 127] [0 0   0   0   0   0]
-# bpm page down:  Note On 5
-79 [0 0   0   0   0   0] [1 0 144  05   0 127] [0 0   0   0   0   0]
-# reserved for expansion:
+# bpm page down: Note On 5
+79 [0 0   0   0   0   0] [1 0 144   5   0 127] [0 0   0   0   0   0]
+# screen set by number:
 80 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
-# reserved for expansion:
-81 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
+# MIDI RECORD (toggle, on, off):
+81 [1 0 144  17   0  31] [1 0 144  19   0  31] [1 0 144  21   0  31]
 # reserved for expansion:
 82 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
 # reserved for expansion:
 83 [0 0   0   0   0   0] [0 0   0   0   0   0] [0 0   0   0   0   0]
 
+# vim: sw=4 ts=4 wm=4 et ft=sh
