--- a/Makefile-helper
+++ b/Makefile-helper
@@ -4,7 +4,7 @@
 # \library    	Documents
 # \author     	Chris Ahlstrom
 # \date       	2015-11-01
-# \update     	2017-05-13
+# \update     	2017-09-23
 # \version    	$Revision$
 # \license    	$XPC_SUITE_GPL_LICENSE$
 #
@@ -16,19 +16,31 @@
 
 MKERROR="no"
 
-if [ "$1" == "" ] ; then
+if [ "$1" == "clean" ] ; then
+
+   pushd tex
+   make clean
+   popd
+
+else
+
+	echo "Building PDF using latexmk..."
    pushd tex
    make
    if [ $? != 0 ] ; then
       MKERROR="yes"
+		echo "FATAL ERROR in processing TeX files!"
+	else
+		cp sequencer64-user-manual.pdf ../pdf/
+		cp sequencer64-user-manual.pdf ../pdf/sequencer64-user-manual-unoptimized.pdf 
    fi
    popd
+
    if [ "$MKERROR" == "no" ] ; then
-      cp tex/*.pdf pdf
-		rm tex/*.pdf
+		if [ "$1" == "optimize" ] ; then
 		pushd pdf
 		mv sequencer64-user-manual.pdf s-temp.pdf
-gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dNOPAUSE -dQUIET -dBATCH \
+	gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dNOPAUSE -dQUIET -dBATCH \
  -sOutputFile=sequencer64-user-manual.pdf s-temp.pdf
  		if [ $? == 0 ] ; then
 			rm s-temp.pdf
@@ -37,11 +49,8 @@ gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dNOPAUSE -dQUIET -dBATCH \
 			mv s-temp.pdf sequencer64-user-manual.pdf
 		fi
 		popd
-   fi
-elif [ "$1" == "clean" ] ; then
-   pushd tex
-   make clean
-   popd
+   	fi
+	fi
 fi
 
 #******************************************************************************
